# Capstone_Project_SDAIA

./: .gitignore  README.md  pyproject.toml  requirements.txt
Capstone_Project_SDAIA/: pyvenv.cfg
Capstone_Project_SDAIA/Scripts/: activate  activate.bat
src/: BackEnd.py  app-1.py  supabase_config.py
src/Agents/: Contextual_Analyst_A2.py  Investigator_Agent2.py  Moderator_A6.py  RFP_Strategic_Scout_A1.py  Requirement_Scout_Agent1.py  Response_analyst_A3.py  Response_analyst_A4.py  Scoring_A5.py  crew_manager.py  llm_as_judge_A3.py  main.ipynb  main.py  request.md  request1_final_clean3.md  test_markdown.ipynb  toc_extracted.json
src/Agents/utils/: document_processor.py  proposal_processor.py
src/data/: RFP_raw.md
src/data/processed/: RFP_Final_Cleaned.md  RFP_cleaned.md  RFP_raw.md  Vendor_A.extraction.md  vendor_a_cleaned.md  (+4 more)
src/outputs/: Filter_sections.json  RFP_requirements_ar.json  contextual_requirements.json  contextual_requirements_ar.json  evidence1_Vendor_B.extraction.md.json  evidence_Vendor_A.extraction.md.json  evidence_Vendor_B.extraction.md.json  evidence_Vendor_C.extraction.md.json  evidence_vendor_a_cleaned.md.json  evidence_vendor_b_cleaned.md.json  evidence_vendor_c_cleaned.md.json  scorecard_evidence_vendor_a_cleaned.md.json  scorecard_evidence_vendor_b_cleaned.md.json  scorecard_evidence_vendor_c_cleaned.md.json  selected_sections.json  selscted.json  strategic_refined_requirements.json  verified_report_vendor_a_cleaned.json  verified_report_vendor_b_cleaned.json  verified_report_vendor_c_cleaned.json
src/utils/: document_processor.py
(+17 files in other folders)
