[project]
name = "Capstone_Project_SDAIA"
version = "0.1.0"  
requires-python = ">=3.11, <3.13" 
dependencies = [
  "typer",
  "streamlit",
  "pandas",
  "numpy",
  "crewai==0.114.0", 
  "crewai[tools,agentops]==0.114.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Agents"]